tests-system/xref-2/output
link != null implies link.status == bar.Status.NEW, "Must be linked to new"
                     ^^^^ xref-2/checks.check:4: error: expression 'link' has type MyType, which is not a tuple
Processed 1 model, 1 check and 1 requirement file and found 1 error
